@@ -64,7 +64,6 @@ Alien::m4                                      = 0.19
 Alien::MSYS                                    = 0.14
 Alien::nasm                                    = 0.22
 Alien::Nettle                                  = 0.04
-Alien::nragent                                 = 0.06
 Alien::patch                                   = 0.15
 Alien::pkgconf                                 = 0.16
 Alien::Role::Alt                               = 0.05
@@ -136,7 +135,6 @@ Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.52
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.60
-NewRelic::Agent::FFI                           = 0.09
 PeekPoke::FFI                                  = 0.02
 Perl::Critic::Plicease                         = 0.03
 Photography::DX                                = 0.02
