@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove deprecated module Alien::nragent
+  - Remove deprecated module NewRelic::Agent::FFI
 
 2.16      2020-04-25 16:58:27 -0600
   - Updated my dists to latest
